--- a/html/planning.html
+++ b/html/planning.html
@@ -6,19 +6,20 @@
 	<link href="index.css" rel="stylesheet" media="screen" type="text/css" />
     </head>
 
-    <body> <div id="menu">
-	PBA - 
-	<a href="planning.html">Planning</a>
-	<a href="paiement.html">Achat de jetons</a>
-	<a href="fidelite.html">Fidélité</a>
-	<a href="streaming.html">Streaming</a>
-	<a href="boiteAIdees.html">Boite à idées</a>
-      	<a href="evenements.html">Evénements</a>
-	<a href="competition.html">Compétition</a>
-	<a href="dons.html">Dons</a>
-	<a href="historiqueSeance.html">Historique des séances</a>
-	<a href="monCompte.html">Mon compte</a>
-      </div>
+    <body> 
+    <navbar id="menu">
+        PBA - 
+        <a href="planning.html">Planning</a>
+        <a href="paiement.html">Achat de jetons</a>
+        <a href="fidelite.html">Fidélité</a>
+        <a href="streaming.html">Streaming</a>
+        <a href="boiteAIdees.html">Boite à idées</a>
+            <a href="evenements.html">Evénements</a>
+        <a href="competition.html">Compétition</a>
+        <a href="dons.html">Dons</a>
+        <a href="historiqueSeance.html">Historique des séances</a>
+        <a href="monCompte.html">Mon compte</a>
+    </navbar>
       <h1>Planning</h1>
     </body>
 </html>
