--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     </head>
 
     <body>
-      <div id="menu">
-	PBA - 
-	<a href="html/planning.html">Planning</a>
-	<a href="html/paiement.html">Achat de jetons</a>
-	<a href="html/fidelite.html">Fidélité</a>
-	<a href="html/streaming.html">Streaming</a>
-	<a href="html/boiteAIdees.html">Boite à idées</a>
-      	<a href="html/evenements.html">Evénements</a>
-	<a href="html/competition.html">Compétition</a>
-	<a href="html/dons.html">Dons</a>
-	<a href="html/historiqueSeance.html">Historique des séances</a>
-	<a href="html/monCompte.html">Mon compte</a>
-      </div>
+    <navbar id="menu">
+        PBA - 
+        <a href="html/planning.html">Planning</a>
+        <a href="html/paiement.html">Achat de jetons</a>
+        <a href="html/fidelite.html">Fidélité</a>
+        <a href="html/streaming.html">Streaming</a>
+        <a href="html/boiteAIdees.html">Boite à idées</a>
+        <a href="html/evenements.html">Evénements</a>
+        <a href="html/competition.html">Compétition</a>
+        <a href="html/dons.html">Dons</a>
+        <a href="html/historiqueSeance.html">Historique des séances</a>
+        <a href="html/monCompte.html">Mon compte</a>
+    </navbar>
       
     </body>
 </html>
