--- a/html/form/choisirDate.html
+++ b/html/form/choisirDate.html
@@ -14,14 +14,14 @@
         <tr><td>Lundi</td><td>Mardi</td><td>Mercredi</td><td>Jeudi</td><td>Vendredi</td><td>Samedi</td><td>Dimanche</td>
     </thead>
     <tbody>
-        <tr class="date"><td><a href="creerEvenement.html">30</a></td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td></tr>
+        <tr class="date"><td><a href="creerEvenement.html">30</a></td><td><a href="creerEvenement.html">1</a></td><td><a href="creerEvenement.html">2</a></td><td><a href="creerEvenement.html">3</a></td><td><a href="creerEvenement.html">4</a></td><td><a href="creerEvenement.html">5</a></td><td><a href="creerEvenement.html">6</a></td></tr>
         <tr class="event"><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr class="date"><td>7</td><td>8</td><td>9</td><td>10</td><td>11</td><td>12</td><td>13</td></tr>
+        <tr class="date"><td><a href="creerEvenement.html">7</a></td><td><a href="creerEvenement.html">8</a></td><td><a href="creerEvenement.html">9</a></td><td><a href="creerEvenement.html">10</a></td><td><a href="creerEvenement.html">11</a></td><td><a href="creerEvenement.html">12</a></td><td><a href="creerEvenement.html">13</a></td></tr>
         <tr class="event"><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr class="date"><td>14</td><td>15</td><td><a href="javascript:nonFreeDate();">16</a></td><td>17</td><td>18</td><td>19</td><td>20</td></tr>
+        <tr class="date"><td><a href="creerEvenement.html">14</a></td><td><a href="creerEvenement.html">15</a></td><td><a href="javascript:nonFreeDate();">16</a></td><td><a href="creerEvenement.html">17</a></td><td><a href="creerEvenement.html">18</a></td><td><a href="creerEvenement.html">19</a></td><td><a href="creerEvenement.html">20</a></td></tr>
         <tr class="event"><td></td><td></td><td>Tournoi PBA</td><td></td><td></td><td></td><td></td></tr>
-        <tr class="date"><td>21</td><td>22</td><td>23</td><td>24</td><td>25</td><td>26</td><td>27</td></tr>
-        <tr class="event"><td></td><td></td><td></td><td></td><td>Noel</td><td></td><td></td></tr>
+        <tr class="date"><td><a href="creerEvenement.html">21</a></td><td><a href="creerEvenement.html">22</a></td><td><a href="creerEvenement.html">23</a></td><td><a href="creerEvenement.html">24</a></td><td><a href="javascript:nonFreeDate();">25</a></td><td><a href="creerEvenement.html">26</a></td><td><a href="creerEvenement.html">27</a></td></tr>
+        <tr class="event"><td></td><td></td><td></td><td></td><td>Soirée de Noel</td><td></td><td></td></tr>
 
     </tbody>
     </table>
