--- a/html/form/creerEvenement.html
+++ b/html/form/creerEvenement.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <form>
+    <form action="../evenements.html">
         Nom : <input type="text"/>
         Type : <input type="text"/>
         Description : <input type="textarea"/>
