--- a/html/boiteAIdees.html
+++ b/html/boiteAIdees.html
@@ -14,12 +14,25 @@
         <a href="fidelite.html">Fidélité</a>
         <a href="streaming.html">Streaming</a>
         <a href="boiteAIdees.html">Boite à idées</a>
-            <a href="evenements.html">Evénements</a>
+        <a href="evenements.html">Evénements</a>
         <a href="competition.html">Compétition</a>
         <a href="dons.html">Dons</a>
         <a href="historiqueSeance.html">Historique des séances</a>
         <a href="monCompte.html">Mon compte</a>
     </navbar>
       <h1>Boite à idées</h1>
+      
+      <a href="form/creerIdee.html">Proposer un idée</a>
+      <div id="idees">
+        <div class="idee">
+            <p></p>
+            <p></p>
+        </div>
+        
+        <div class="idee">
+            <p></p>
+            <p></p>
+        </div>
+      </div>
     </body>
 </html>
