--- a/html/fidelite.html
+++ b/html/fidelite.html
@@ -21,7 +21,12 @@
         <a href="monCompte.html">Mon compte</a>
     </navbar>
       <h1>Fidélité</h1>
-      <p>Point de fidélité :</p>
-      <p>Voir la boutique</p>
+      <p>Vous avez 1500 points</p>
+      <h1>Boutique</h1>
+		<p>Afin d'échanger vos points, rendez-vous à l'association</p>
+		<p>T-shirt - 2000 points</p>
+		<p>Peluche -1000 points</p>
+		<p>Porte-clés -500 points</p>
+		<p>Stylo -500 points</p>
     </body>
 </html>
