--- a/html/form/creerIdee.html
+++ b/html/form/creerIdee.html
@@ -2,14 +2,13 @@
 <html>
     <head>
     <meta charset="utf-8" />
-    <title>Création d'évenement</title>
+    <title>Proposition idée</title>
     <link href="index.css" rel="stylesheet" media="screen" type="text/css" />
 </head>
 
 <body>
-    <form action="../evenements.html">
-        Nom : <input type="text"/>
-        Type : <input type="text"/>
+    <form id="formCreeIdee" action="../boiteAIdees.html">
+        Sujet : <input type="text"/>
         Description : <input type="textarea"/>
         <input type="submit"/>
     </form>
