--- a/html/historiqueSeance.html
+++ b/html/historiqueSeance.html
@@ -21,5 +21,19 @@
         <a href="monCompte.html">Mon compte</a>
     </navbar>
       <h1>Historique de vos séances</h1>
+
+		<div id="seances">
+			<div class="seance">
+				<p>25/11/2015</p>
+			</div>
+
+			<div class="seance">
+				<p>18/11/2015</p>
+			</div>
+			<div class="seance">
+				<p>10/11/2015</p>
+			</div>
+
+		</div>
     </body>
 </html>
