--- a/html/monCompte.html
+++ b/html/monCompte.html
@@ -21,5 +21,10 @@
         <a href="monCompte.html">Mon compte</a>
     </navbar>
     <h1> Modifier ses informations</h1>
+
+	<p>Changer le mot de passe</p> <input type="text"/>
+	<p>Confirmer le nouveau mot de passe</p> <input type="text"/>
+	<p>Changer l'adresse mail</p> <input type="text"/>
+	<p>Confirmer la nouvelle adresse mail</p> <input type="text"/>
     </body>
 </html>
