--- a/html/paiement.html
+++ b/html/paiement.html
@@ -21,5 +21,8 @@
         <a href="monCompte.html">Mon compte</a>
     </navbar>
       <h1>Paiement</h1>
+        <p>Vous disposez actuellement de 50 jetons</p>
+        <a href="form/achat.html">Acheter des jetons</a>
+        
     </body>
 </html>
