--- a/html/boiteAIdeesAnimateur.html
+++ b/html/boiteAIdeesAnimateur.html
@@ -7,18 +7,15 @@
     </head>
 
     <body> 
-    <navbar id="menu">
+  <navbar id="menu">
         PBA - 
-        <a href="planning.html">Planning</a>
-        <a href="paiement.html">Achat de jetons</a>
-        <a href="fidelite.html">Fidélité</a>
-        <a href="streaming.html">Streaming</a>
-        <a href="boiteAIdees.html">Boite à idées</a>
-        <a href="evenements.html">Evénements</a>
-        <a href="competition.html">Compétition</a>
-        <a href="dons.html">Dons</a>
-        <a href="historiqueSeance.html">Historique des séances</a>
-        <a href="monCompte.html">Mon compte</a>
+        <a href="html/planningAnimateur.html">Planning</a>
+        <a href="html/streamingAnimateur.html">Streaming</a>
+        <a href="html/boiteAIdeesAnimateur.html">Boite à idées</a>
+        <a href="html/evenementsAnimateur.html">Evénements</a>
+        <a href="html/competitionAnimateur.html">Compétition</a>
+        <a href="html/donsAnimateur.html">Dons</a>
+        <a href="html/monCompteAnimateur.html">Mon compte</a>
     </navbar>
       <h1>Boite à idées</h1>
       
