--- a/html/boiteAIdeesInter.html
+++ b/html/boiteAIdeesInter.html
@@ -9,16 +9,9 @@
     <body> 
     <navbar id="menu">
         PBA - 
-        <a href="planning.html">Planning</a>
-        <a href="paiement.html">Achat de jetons</a>
-        <a href="fidelite.html">Fidélité</a>
-        <a href="streaming.html">Streaming</a>
-        <a href="boiteAIdees.html">Boite à idées</a>
-        <a href="evenements.html">Evénements</a>
-        <a href="competition.html">Compétition</a>
-        <a href="dons.html">Dons</a>
-        <a href="historiqueSeance.html">Historique des séances</a>
-        <a href="monCompte.html">Mon compte</a>
+        <a href="boiteAIdeesInter.html">Boite à idées</a>
+        <a href="evenementsInter.html">Evénements</a>
+        <a href="donsInter.html">Dons</a>
     </navbar>
       <h1>Boite à idées</h1>
       
