--- a/html/dons.html
+++ b/html/dons.html
@@ -21,5 +21,12 @@
         <a href="monCompte.html">Mon compte</a>
     </navbar>
       <h1>Faire un don</h1>
+
+		 <form id="formDons" action="../dons.html">
+        <p>Choisissez un montant : <input type="text"/></p>
+        <p>Choisissez un moyen de paiement : <select><option>CB</option><option>Paypal</option></select></p>
+		<p>Saisir un message (optionnel) :<input type="textarea"/></p>
+        <input type="submit"/>
+    </form>
     </body>
 </html>
