--- a/html/form/choisirDate.html
+++ b/html/form/choisirDate.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Evenements</title>
+    <title>Choix date</title>
     <link href="index.css" rel="stylesheet" media="screen" type="text/css" />
 </head>
 
