--- a/html/streaming.html
+++ b/html/streaming.html
@@ -5,7 +5,12 @@
         <title>Streaming</title>
 	<link href="index.css" rel="stylesheet" media="screen" type="text/css" />
     </head>
-
+ <script type="text/javascript">
+    function nonStreaming() {
+        alert("La séance n'est plus en cours");
+    }
+    
+    </script>
     <body> 
     <navbar id="menu">
         PBA - 
@@ -14,12 +19,16 @@
         <a href="fidelite.html">Fidélité</a>
         <a href="streaming.html">Streaming</a>
         <a href="boiteAIdees.html">Boite à idées</a>
-            <a href="evenements.html">Evénements</a>
+        <a href="evenements.html">Evénements</a>
         <a href="competition.html">Compétition</a>
         <a href="dons.html">Dons</a>
         <a href="historiqueSeance.html">Historique des séances</a>
         <a href="monCompte.html">Mon compte</a>
     </navbar>
       <h1>Streaming</h1>
+	<h2>Vidéo en cours</h2>
+		<a href="videoEnCours.html">Séance de Bob</a>
+		<a href="javascript:nonStreaming();">Séance d'Iris</a>
+		<a href="videoEnCours.html">Séance de Laure</a>
     </body>
 </html>
