--- a/html/videoEnCours.html
+++ b/html/videoEnCours.html
@@ -2,10 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Boite à idées</title>
+        <title>Streaming</title>
 	<link href="index.css" rel="stylesheet" media="screen" type="text/css" />
     </head>
-
     <body> 
     <navbar id="menu">
         PBA - 
@@ -20,21 +19,7 @@
         <a href="historiqueSeance.html">Historique des séances</a>
         <a href="monCompte.html">Mon compte</a>
     </navbar>
-      <h1>Boite à idées</h1>
-      
-      <a href="form/creerIdee.html">Proposer une idée</a>
-      <div id="idees">
-        <div class="idee">
-            <p>Parcours</p>
-            <p>Je vous suggère de proposer des parcours au participants</p>
-			<p>Anne Onyme</p>
-        </div>
-        
-        <div class="idee">
-            <p>Forum</p>
-            <p>Serait-il possible d'ajouter un forum sur le site</p>
-			<p>Alain Onyme</p>
-        </div>
-      </div>
+      <h1>Streaming</h1>
+		<iframe width="420" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
     </body>
 </html>
