add navbar on all pages

--- a/html/planning.html
+++ b/html/planning.html
@@ -31,11 +31,14 @@
         </tbody>
       </table>
       
-      <h2>Prochaines séances potentielles (veuillez indiquer si vous êtes interressés)</h2>
+      <h2>Prochaines séances potentielles</h2>
+	  <p>Vous pouvez indiquer ici si une date vous interresse pour une séance</p>
       <table>
-        <thead>
+        <tbody>
         <tr><td>29/01/2016</td><td><a href="javascript:confirm();">interressé</a></td><td><a href="javascript:confirm();">pas interressé</a></td></tr>
         <tr><td>05/02/2016</td><td><a href="javascript:confirm();">interressé</a></td><td><a href="javascript:confirm();">pas interressé</a></td></tr>
+		</tbody>
+	  </table>
     </body>
     
     <script type="text/javascript">
