--- a/html/form/choisirDate.html
+++ b/html/form/choisirDate.html
@@ -7,6 +7,20 @@
 </head>
 
 <body>
+    <navbar id="menu">
+        PBA - 
+        <a href="../planning.html">Planning</a>
+        <a href="../paiement.html">Achat de jetons</a>
+        <a href="../fidelite.html">Fidélité</a>
+        <a href="../streaming.html">Streaming</a>
+        <a href="../boiteAIdees.html">Boite à idées</a>
+        <a href="../evenements.html">Evénements</a>
+        <a href="../competition.html">Compétition</a>
+        <a href="../dons.html">Dons</a>
+        <a href="../historiqueSeance.html">Historique des séances</a>
+        <a href="../monCompte.html">Mon compte</a>
+    </navbar>
+	
     
     <div id="month">Décembre</div>
     <table id="calendar">
