--- a/html/inscriptionSeance.html
+++ b/html/inscriptionSeance.html
@@ -7,7 +7,19 @@
     </head>
 
     <body>
-    
+    <navbar id="menu">
+        PBA - 
+        <a href="planning.html">Planning</a>
+        <a href="paiement.html">Achat de jetons</a>
+        <a href="fidelite.html">Fidélité</a>
+        <a href="streaming.html">Streaming</a>
+        <a href="boiteAIdees.html">Boite à idées</a>
+        <a href="evenements.html">Evénements</a>
+        <a href="competition.html">Compétition</a>
+        <a href="dons.html">Dons</a>
+        <a href="historiqueSeance.html">Historique des séances</a>
+        <a href="monCompte.html">Mon compte</a>
+    </navbar>
     <p>Voulez vous vraiment vous inscrire à cette séance pour 5 jetons ?</p>
     <p>Jetons que vous possédez actuellement : 50</p>
     <p>Jetons restant après le paiement : 45</p>
